--- a/src/index.css
+++ b/src/index.css
@@ -98,3 +98,15 @@ button.clear {
   font-size: 1.5rem;
   margin-bottom: 8px;
 }
+
+.dashboard .bugList .summary {
+  width: 35%;
+}
+
+.dashboard .bugList .component {
+  width: 25%;
+}
+
+.dashboard .bugList .id {
+  width: 80px;
+}
